@@ -13,10 +13,10 @@ import org.rudi.microservice.projekt.core.bean.ProjectSearchCriteria;
 import org.rudi.microservice.projekt.core.bean.ProjectStatus;
 import org.springframework.stereotype.Component;
 import org.springframework.web.reactive.function.client.WebClient;
+import reactor.core.publisher.Mono;
 
 import lombok.RequiredArgsConstructor;
 import lombok.val;
-import reactor.core.publisher.Mono;
 
 @Component
 @RequiredArgsConstructor
@@ -90,7 +90,7 @@ public class ProjektHelper {
 	public Long getNumberOfValidatedProjects() {
 		PagedProjectList validatedProjectList = projektWebClient.get()
 				.uri(uriBuilder -> uriBuilder.path(projektProperties.getGetProjectsPath())
-						.queryParam("status", Arrays.asList(ProjectStatus.VALIDATED)).queryParam("offset", 0)
+						.queryParam("status", List.of(ProjectStatus.VALIDATED)).queryParam("offset", 0)
 						.queryParam("limit", 0).build())
 				.retrieve().bodyToMono(PagedProjectList.class).block();
 
